# AnsysConnector

./: .gitignore  LOCAL_STATUS.md  README.md  pyproject.toml  requirements.txt
examples/products/fluent/: version.yaml  version_and_scheme.yaml
examples/products/mechanical/: README.md
examples/products/workbench/: version.yaml
examples/workflows/: README.md
examples/workflows/fluent/: reflow_melting.yaml  steady_run.yaml
examples/workflows/plans/: README.md  multi-session-template.yaml
scripts/diagnostics/: ansys_env_check.py  fluent_smoke_test.py  mechanical_smoke_test.py  workbench_smoke_test.py
src/ansys_connector/: __init__.py  cli.py  environment.py  executor.py  mcp_server.py  models.py  policy.py  registry.py
src/ansys_connector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ansys_connector/adapters/: __init__.py  base.py  fluent.py  mechanical.py  workbench.py
src/ansys_connector/core/: __init__.py  environment.py  registry.py
src/ansys_connector/core/execution/: __init__.py  broker.py  executor.py  managed_session.py  session_store.py
src/ansys_connector/core/policy/: __init__.py  paths.py  profiles.py  (+1 more)
src/ansys_connector/interfaces/: __init__.py
src/ansys_connector/products/: __init__.py  base.py
src/ansys_connector/workflows/: __init__.py
tests/: __init__.py  support.py
tests/integration/execution/: test_executor.py
tests/integration/interfaces/: __init__.py
tests/unit/core/: test_broker.py  test_policy.py  test_session_store.py
tests/unit/products/: __init__.py  test_status.py
(+38 files in other folders)
